# ChouchouterByNanou

./: .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  README.md  app.py  backup.dump  backup.sql  backup_data.sql  base_de_données.sql  eslint.config.mjs  generate_qr.py  hash_passwords.py  main.py  models.py  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.sh  setup_env.bat  stylelint.config.js  trouver_erreur.py
app/: __init__.py  extensions.py  models.py  routes.py  utils.py
app/chouchouter_by_nanou.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/routes/: __init__.py  account_routes.py  admin_routes.py  comment_routes.py  main_routes.py  qr_routes.py  reset_password_routes.py
app/services/: user_service.py
app/static/: accueil.css  admin_approbation.css  admin_dashboard.css  admin_edit_prestation.css  admin_edit_user.css  app.js  cgu.css  comments.css  connection.css  contact_us.css  delete_account.css  flash.css  mentions.css  my_comments.css  politique_confidentialite.css  portfolio.css  rates.css  (+7 more)
deploy/: docker-compose.yml  nginx.conf
migrations/: env.py
mongo_scripts/: tablettes.js
static/: accueil.css  cgu.css  connection.css  connexion.css  mentions.css  portfolio.css  style.css  tablettes.css  tarifs.css
templates/: accueil.html  base.html  cgu.html  comments.html  connection.html  connexion.html  mentions.html  portfolio.html  register.html  tablettes.html  tarifs.html
tests/: conftest.py  test_admin.py  test_app.py  test_auth.py  test_comments.py  test_models.py  test_reset_password.py  test_routes.py  test_user.py  test_utils.py
(+81 files in other folders)
