[tool.black]
line-length = 88
target-version = ['py38']
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
exclude = [
  "migrations/",
  "tests/"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chouchouter_by_nanou"
version = "0.1.0"
description = "Projet Flask pour CHOUCHOUTER_BY_NANOU"
authors = [
  { name = "Cyril" }
]
dependencies = [
  "Flask>=2.3",
  "SQLAlchemy>=2.0",
  "pytest>=7.0"
]

[tool.setuptools.packages.find]
where = ["app"]
